--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-30 20:15+0800\n"
+"POT-Creation-Date: 2022-12-01 12:31+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1384,6 +1384,9 @@ msgstr ""
 msgid "An SD card needs to be inserted before printing via LAN."
 msgstr ""
 
+msgid "Send to Printer failed. Please try again."
+msgstr ""
+
 msgid "Sending gcode file over LAN"
 msgstr ""
 
@@ -1884,6 +1887,17 @@ msgstr ""
 "Le mode spirale ne fonctionne que lorsque les boucles murales sont à 1, le "
 "support est désactivé, les couches de coque supérieures sont à 0 et la "
 "densité de remplissage clairsemée est à 0"
+
+msgid ""
+"Arachne engine only works when overhang slowing down is disabled.\n"
+"This may cause decline in the quality of overhang surface when print fastly\n"
+msgstr ""
+
+msgid ""
+"Disable overhang slowing down automatically? \n"
+"Yes - Enable arachne and disable overhang slowing down\n"
+"No  - Give up using arachne this time"
+msgstr ""
 
 msgid ""
 "Prime tower does not work when Adaptive Layer Height or Independent Support "
@@ -2516,6 +2530,9 @@ msgstr "Assiette à trancher"
 msgid "Export G-code file"
 msgstr ""
 
+msgid "Send"
+msgstr "Envoyer"
+
 msgid "Print plate"
 msgstr ""
 
@@ -2527,6 +2544,9 @@ msgstr ""
 
 msgid "Print all"
 msgstr "Tout imprimer"
+
+msgid "Send all"
+msgstr ""
 
 msgid "Keyboard Shortcuts"
 msgstr "Raccourcis clavier"
@@ -3079,6 +3099,18 @@ msgid "Cancel print"
 msgstr ""
 
 msgid "Are you sure you want to cancel this print?"
+msgstr ""
+
+#, c-format, boost-format
+msgid ""
+"Disconnected from printer [%s] due to LAN mode disabled.Please reconnect the "
+"printer by logging in with your user account."
+msgstr ""
+
+#, c-format, boost-format
+msgid ""
+"Disconnected from printer [%s] due to LAN mode enabled.Please reconnect the "
+"printer by inputting Access Code which can be gotten from printer screen."
 msgstr ""
 
 msgid "Downloading..."
@@ -4159,9 +4191,6 @@ msgstr "Mise à niveau du lit"
 msgid "Flow Calibration"
 msgstr "Étalonnage du débit"
 
-msgid "Send"
-msgstr "Envoyer"
-
 msgid "send completed"
 msgstr "envoi terminé"
 
@@ -4275,7 +4304,7 @@ msgstr "Préparation du travail d'impression"
 msgid "Modifying the device name"
 msgstr "Modification du nom de l'appareil"
 
-msgid "Send to Printer"
+msgid "Send to Printer SD card"
 msgstr ""
 
 msgid "The printer is required to be in the same LAN as Bambu Studio."
@@ -4359,6 +4388,9 @@ msgstr "Couture"
 
 msgid "Precision"
 msgstr "Précision"
+
+msgid "Wall generator"
+msgstr ""
 
 msgid "Walls"
 msgstr "Des murs"
@@ -4727,8 +4759,8 @@ msgid "Capabilities"
 msgstr "Capacités"
 
 msgid ""
-"The P1P printer is not support smooth timelapse, it will not transform the "
-"timelapse changes."
+"The P1P printer does not support smooth timelapse, use traditional timelapse "
+"instead."
 msgstr ""
 
 msgid "Show all presets (including incompatible)"
@@ -5875,6 +5907,9 @@ msgstr ""
 msgid "Compatible machine"
 msgstr "Appareils compatibles"
 
+msgid "upward compatible machine"
+msgstr ""
+
 msgid "Compatible machine condition"
 msgstr "État de la machine compatible"
 
@@ -5962,9 +5997,6 @@ msgstr ""
 "support s'ils ne sont pas très longs."
 
 msgid "Thick bridges"
-msgstr ""
-
-msgid "Layers and Perimeters"
 msgstr ""
 
 msgid ""
@@ -7392,6 +7424,11 @@ msgstr ""
 msgid "Purging volumes"
 msgstr "Volumes de purge"
 
+msgid ""
+"The actual flushing volumes is equal to the flush multiplier multiplied by "
+"the flushing volumes in the table."
+msgstr ""
+
 msgid "Prime volume"
 msgstr "Premier volume"
 
@@ -7449,6 +7486,79 @@ msgstr ""
 "configurée. Une valeur positive agrandit le contour. Une valeur négative "
 "rend le contour plus petit. Cette fonction est utilisée pour ajuster "
 "légèrement la taille lorsque l'objet a un problème d'assemblage"
+
+msgid ""
+"Classic wall generator produces walls with constant extrusion width and for "
+"very thin areas is used gap-fill. Arachne engine produces walls with "
+"variable extrusion width"
+msgstr ""
+
+msgid "Classic"
+msgstr ""
+
+msgid "Arachne"
+msgstr ""
+
+msgid "Wall transition length"
+msgstr ""
+
+msgid ""
+"When transitioning between different numbers of walls as the part becomes "
+"thinner, a certain amount of space is allotted to split or join the wall "
+"segments. It's expressed as a percentage over nozzle diameter"
+msgstr ""
+
+msgid "Wall transitioning filter margin"
+msgstr ""
+
+msgid ""
+"Prevent transitioning back and forth between one extra wall and one less. "
+"This margin extends the range of extrusion widths which follow to [Minimum "
+"wall width - margin, 2 * Minimum wall width + margin]. Increasing this "
+"margin reduces the number of transitions, which reduces the number of "
+"extrusion starts/stops and travel time. However, large extrusion width "
+"variation can lead to under- or overextrusion problems. It's expressed as a "
+"percentage over nozzle diameter"
+msgstr ""
+
+msgid "Wall transitioning threshold angle"
+msgstr ""
+
+msgid ""
+"When to create transitions between even and odd numbers of walls. A wedge "
+"shape with an angle greater than this setting will not have transitions and "
+"no walls will be printed in the center to fill the remaining space. Reducing "
+"this setting reduces the number and length of these center walls, but may "
+"leave gaps or overextrude"
+msgstr ""
+
+msgid "Wall distribution count"
+msgstr ""
+
+msgid ""
+"The number of walls, counted from the center, over which the variation needs "
+"to be spread. Lower values mean that the outer walls don't change in width"
+msgstr ""
+
+msgid "Minimum feature size"
+msgstr ""
+
+msgid ""
+"Minimum thickness of thin features. Model features that are thinner than "
+"this value will not be printed, while features thicker than the Minimum "
+"feature size will be widened to the Minimum wall width. It's expressed as a "
+"percentage over nozzle diameter"
+msgstr ""
+
+msgid "Minimum wall width"
+msgstr ""
+
+msgid ""
+"Width of the wall that will replace thin features (according to the Minimum "
+"feature size) of the model. If the Minimum wall width is thinner than the "
+"thickness of the feature, the wall will become as thick as the feature "
+"itself. It's expressed as a percentage over nozzle diameter"
+msgstr ""
 
 msgid "Detect narrow internal solid infill"
 msgstr "Détecter un remplissage solide interne étroit"
