ENH:updated some chinese translations
Change-Id: I7ec7b64920bd92d0d8e56a06fdaa4f0fb4add17f

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-01 12:31+0800\n"
+"POT-Creation-Date: 2022-12-02 17:33+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3506,6 +3506,15 @@ msgid "Creating a new project"
 msgstr ""
 
 msgid "Load project"
+msgstr ""
+
+msgid ""
+"Failed to save project!\n"
+"Please make sure the project file has not been opened by other program and "
+"try again."
+msgstr ""
+
+msgid "Save project"
 msgstr ""
 
 msgid "Importing Model"
