--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-01 12:31+0800\n"
+"POT-Creation-Date: 2022-12-02 17:33+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3635,6 +3635,15 @@ msgstr "Creating a new project"
 
 msgid "Load project"
 msgstr "Load project"
+
+msgid ""
+"Failed to save project!\n"
+"Please make sure the project file has not been opened by other program and "
+"try again."
+msgstr ""
+
+msgid "Save project"
+msgstr ""
 
 msgid "Importing Model"
 msgstr ""
