--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-01 12:31+0800\n"
+"POT-Creation-Date: 2022-12-02 17:33+0800\n"
 "PO-Revision-Date: 2022-11-29 20:47+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -2126,7 +2126,7 @@ msgid "Used filament"
 msgstr "使用的耗材丝"
 
 msgid "Flushed"
-msgstr ""
+msgstr "冲刷"
 
 msgid "Tower"
 msgstr ""
@@ -2495,7 +2495,7 @@ msgid "Print all"
 msgstr "打印所有盘"
 
 msgid "Send all"
-msgstr ""
+msgstr "发送所有盘"
 
 msgid "Keyboard Shortcuts"
 msgstr "快捷键"
@@ -3606,6 +3606,15 @@ msgstr "创建新项目"
 
 msgid "Load project"
 msgstr "加载项目"
+
+msgid ""
+"Failed to save project!\n"
+"Please make sure the project file has not been opened by other program and "
+"try again."
+msgstr ""
+
+msgid "Save project"
+msgstr "保存项目"
 
 msgid "Importing Model"
 msgstr "正在导入模型"
@@ -7217,8 +7226,10 @@ msgid ""
 "no walls will be printed in the center to fill the remaining space. Reducing "
 "this setting reduces the number and length of these center walls, but may "
 "leave gaps or overextrude"
-msgstr "何时在偶数和奇数墙层数之间创建过渡段。角度大于这个阈值的楔形将不创建过渡段，"
-"并且不会在楔形中心打印墙走线以填补剩余空间。减小这个数值能减少中心墙走线的数量和长度，但可能会导致间隙或者过挤出"
+msgstr ""
+"何时在偶数和奇数墙层数之间创建过渡段。角度大于这个阈值的楔形将不创建过渡段，"
+"并且不会在楔形中心打印墙走线以填补剩余空间。减小这个数值能减少中心墙走线的数"
+"量和长度，但可能会导致间隙或者过挤出"
 
 msgid "Wall distribution count"
 msgstr "墙分布计数"
@@ -7226,7 +7237,9 @@ msgstr "墙分布计数"
 msgid ""
 "The number of walls, counted from the center, over which the variation needs "
 "to be spread. Lower values mean that the outer walls don't change in width"
-msgstr "从中心开始计算的墙层数，线宽变化需要分布在这些墙走线上。较低的数值意味着外墙宽度更不易被改变"
+msgstr ""
+"从中心开始计算的墙层数，线宽变化需要分布在这些墙走线上。较低的数值意味着外墙"
+"宽度更不易被改变"
 
 msgid "Minimum feature size"
 msgstr "最小特征尺寸"
@@ -7236,7 +7249,9 @@ msgid ""
 "this value will not be printed, while features thicker than the Minimum "
 "feature size will be widened to the Minimum wall width. It's expressed as a "
 "percentage over nozzle diameter"
-msgstr "薄壁特征的最小厚度。比这个数值还薄的特征将不被打印，而比最小特征厚度还厚的特征将被加宽到墙最小宽度。参数值表示为相对喷嘴直径的百分比"
+msgstr ""
+"薄壁特征的最小厚度。比这个数值还薄的特征将不被打印，而比最小特征厚度还厚的特"
+"征将被加宽到墙最小宽度。参数值表示为相对喷嘴直径的百分比"
 
 msgid "Minimum wall width"
 msgstr "墙最小线宽"
@@ -7246,7 +7261,9 @@ msgid ""
 "feature size) of the model. If the Minimum wall width is thinner than the "
 "thickness of the feature, the wall will become as thick as the feature "
 "itself. It's expressed as a percentage over nozzle diameter"
-msgstr "用于替换模型细小特征（根据最小特征尺寸）的墙线宽。如果墙最小线宽小于最小特征的厚度，则墙将变得和特征本身一样厚。参数值表示为相对喷嘴直径的百分比"
+msgstr ""
+"用于替换模型细小特征（根据最小特征尺寸）的墙线宽。如果墙最小线宽小于最小特征"
+"的厚度，则墙将变得和特征本身一样厚。参数值表示为相对喷嘴直径的百分比"
 
 msgid "Detect narrow internal solid infill"
 msgstr "识别狭窄内部实心填充"
@@ -8801,9 +8818,6 @@ msgstr ""
 
 #~ msgid "No objects to export."
 #~ msgstr "没有可导出的对象。"
-
-#~ msgid "Save project"
-#~ msgstr "保存项目"
 
 #~ msgid "Event"
 #~ msgstr "事件"
