--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-01 12:31+0800\n"
+"POT-Creation-Date: 2022-12-02 17:33+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3684,6 +3684,15 @@ msgstr "Creando un nuevo proyecto"
 
 msgid "Load project"
 msgstr "Carga de Proyecto"
+
+msgid ""
+"Failed to save project!\n"
+"Please make sure the project file has not been opened by other program and "
+"try again."
+msgstr ""
+
+msgid "Save project"
+msgstr ""
 
 msgid "Importing Model"
 msgstr ""
